<resources>
    <string name="app_name">Vakunapp</string>
    <string name="app_text">VAKUNAPP</string>

    <!-- REGISTRO -->
    <string name="email">Ingresa el Correo Electrónico</string>
    <string name="password">Ingresa la Contraseña</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="login">Iniciar sesión</string>
    <string name="createAct">Crear cuenta</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="campo_requerido">Campo Requerido</string>
    <string name="numero_documento">Ingrese el número del documento</string>
    <string name="contrasena">Ingrese la contraseña</string>
    <string name="tipo_documento">Tipo de documento</string>
    <string name="olvidaste_tu_contrasena"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="continuar">Continuar</string>
    <string name="crear_cuenta"><u>Crear Cuenta</u></string>
    <string name="title_activity_menu">activity_menu</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Menu -->
    <string name="nucleo_familiar">Núcleo Familiar</string>
    <string name="plan_vacunacion">Plan de Vacunación</string>
    <string name="carnet_vacunacion">Carnet de Vacunación</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="unad">UNAD</string>
    <string name="action_opciones">Opciones</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="registrar_miembros">     Registrar Miembros</string>
    <string name="listar_miembros">Listar Miembros</string>
    <string name="modificar_miembros">Modificar Miembros</string>
    <string name="eliminar_miembros">Eliminar Miembros</string>
    <string name="ingresa_nombre">Ingresa los Nombres</string>
    <string name="ingresa_apellidos">Ingresa los Apellidos</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="modificar">Modificar</string>

    <string name="members_sucesfull">"Miembro creado con éxito en la aplicación."</string>
    <string name="members_update_sucesfull">"Miembro modificado con éxito en la aplicación."</string>

    <string name="register_selection">"Por favor registra los campos de selección."</string>
    <string name="register_all_fields">"Por favor registra todos los campos."</string>

    <!-- RECORDATORIOS -->
    <string name="crear">Crear Nuevo</string>
    <string name="tituloRecordatorio">Recordatorios</string>
    <string name="guardar">Guardar</string>
    <string name="Logout">Cerrar Sesión</string>
    ​
    <string-array name="Recordatorios">
        ​
        <item name="recordatorio">Javier Zapata \n- COVID-19 \n - 2021/04/20</item>
        ​
        <item name="recordatorio">Angelica Valencia - INFLUENZA - 2021/02/20</item>
        ​
        <item name="recordatorio">Carmen Vega - COVID-19 - 2021/05/10</item>
        ​
        <item name="recordatorio">Javier Zapata - COVID-19 - 2021/04/20</item>
        ​
        <item name="recordatorio">Angelica Valencia - INFLUENZA - 2021/02/20</item>
        ​
        <item name="recordatorio">Carmen Vega - COVID-19 - 2021/05/10</item>
        ​
        <item name="recordatorio">Javier Zapata - COVID-19 - 2021/04/20</item>
        ​
        <item name="recordatorio">Angelica Valencia - INFLUENZA - 2021/02/20</item>
        ​
        <item name="recordatorio">Carmen Vega - COVID-19 - 2021/05/10</item>
        ​
    </string-array>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="refresh">Refrescar</string>
    <string name="database_uri">https://vakunapp-default-rtdb.firebaseio.com/</string>
    <string name="fecha_nacimiento"> Selecciona la Fecha de Nacimiento</string>
    <string name="perfil">Editar Perfil</string>
    <string name="miembros_registrados">Miembros Registrados</string>
    <string name="nombres">Nombres :</string>
    <string name="apellidos">Apellidos :</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento :</string>
    <string name="genero">Género :</string>
    <string name="tipo_de_documento">Tipo de Documento :</string>
    <string name="parentesco">Parentesco :</string>
    <string name="numero_de_documento">Número de Documento :</string>
    <string name="grupo_sanguineo">Grupo Sanguíneo :</string>
    <string name="registro_de_miembros">Registro de Miembros</string>
    <string name="registrar_recordatorio">Registrar Recordatorio</string>
    <string name="fecha_vacuna">Fecha Aplicación Vacuna</string>
    <string name="vacuna">Vacuna</string>
    <string name="fecha_aplicacion">Fecha Aplicación</string>
    <string name="fullName">Nombre Completo</string>
    <string name="register_suscesfull">Miembro Registrado Satisfactoriamente</string>
    <string name="edit_register_members">Editar</string>
    <string name="delete_register_members">Eliminar</string>
    <string name="tittleDialogDelete">Eliminar Miembros</string>
    <string name="messageDialogDelete">¿Está seguro que desea eliminar el registro del miembro registrado?</string>
    <string name="negativeButton">NO</string>
    <string name="generar_carnet_vacunacion">Generar Carnet de Vacunación</string>
    <string name="generar">Generar</string>
    <string name="titulo_pdf">"CARNET DE VACUNACION"</string>
    <string name="number_cel">Ingresa el Número de Celular</string>
    <string name="title_crear_cuenta">Crear Cuenta</string>
    <string name="title_editar_cuenta">Editar Cuenta</string>
    <string name="editar_cuenta">Editar Cuenta</string>
    <string name="correo">Email :</string>
    <string name="telephone">Teléfono :</string>
    <string name="recuperar_cuenta">Recuperar Cuenta</string>
    <string name="enviar">Enviar Contraseña</string>
	<string name="edit_plan_members">Gestionar</string>
    <string name="Maps">Puntos de atencion cercanos</string>
    <string name="titulo">titulo</string>
    <string name="description">Descripcion :</string>
    <string name="image">Imagen :</string>
    <string name="Noticias">Noticias</string>
    <string name="InfoVacuna">Diccionario de Vacunas</string>
    <string name="Viajar">Vacunas Para Viajar</string>
    <string name="asociar_plan">Asociar Vacuna</string>
    <string name="editar_recordatorio">Editar Recordatorio</string>
    <string name="remember_update_sucesfull">Recordatorio Actualizado Con Exito</string>
    <string name="remember_suscesfull">Recordatorio Creado Con Exito</string>
    <string name="default_notification_channel_id">vakunapp</string>
    <string name="fcm_message">Vakunapp</string>
    <string name="perfil_update_sucesfull">Perfil Actualizado con Éxito</string>
    <string name="acerca_de">Acerca de</string>
    <string name="acerca_de_mayuscula">ACERCA DE</string>
    <string name="ano_creacion">Marzo 2021</string>
    <string name="nombres_vacuna">Nombre de la vacuna:</string>
    <string name="fecha_aplicacion_vac">Fecha de aplicación :</string>
    <string name="cerrar_cuenta">Cerrar Cuenta</string>
    <string name="dialog_tittle_exit">¿Deseas salir de VakunApp?</string>
    <string name="dialog_exit_confirm">Salir</string>
    <string name="dialog_exit_cancel">Cancelar</string>
    <string name="informacion_vakunapp">VakunApp es una aplicación móvil, que te permite realizar control y seguimiento sobre el esquema de vacunación de todo tu núcleo familiar, de una forma rápida y sencilla.</string>
    <string name="desarrollado_por">Desarrollado Por:</string>
    <string name="alba_florez">ALBA LUZ FLOREZ</string>
    <string name="david_suarez">DAVID STEVEN SUAREZ</string>
    <string name="elquin_pedraza">ELQUIN SAMUEL PEDRAZA</string>
    <string name="javier_zapata">JAVIER STEVEN ZAPATA</string>
    <string name="jhon_sevillano">JHON STALING SEVILLANO</string>

</resources>
