<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_family"
            android:title="@string/nucleo_familiar"
            android:icon="@drawable/ic_registrar_miembros">
        </item>
        <item
            android:id="@+id/nav_pvacunacion"
            android:icon="@drawable/ic_plan_vacunacion"
            android:title="@string/plan_vacunacion" />
        <item
            android:id="@+id/nav_cvacunacion"
            android:icon="@drawable/ic_carnet"
            android:title="@string/carnet_vacunacion" />
        <item
            android:id="@+id/nav_recordatorios"
            android:icon="@drawable/ic_recordatorio"
            android:title="@string/recordatorios" />
        <item
            android:id="@+id/nav_Noticias"
            android:icon="@drawable/ic_news"
            android:title="@string/Noticias" />
        <item
            android:id="@+id/nav_InfoVacunas"
            android:icon="@drawable/ic_ivacunas"
            android:title="@string/InfoVacuna" />
        <item
            android:id="@+id/nav_Viajar"
            android:icon="@drawable/ic_viajar"
            android:title="@string/Viajar" />
        <item
            android:id="@+id/nav_Maps"
            android:icon="@drawable/ic_maps"
            android:title="@string/Maps" />

        <item
            android:id="@+id/nav_AcercaDe"
            android:icon="@drawable/ic_acerca_de"
            android:title="@string/acerca_de" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/Logout" />

    </group>
</menu>