<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/color_aplicacion"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTituloAplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margen_default"
            android:text="@string/app_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/texto_mediano"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagenAutenticacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margen_default"
            app:srcCompat="@mipmap/ic_usuarios" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/viewCustomParent"
            android:hint="@string/email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:hint="Numero de documento*"
                style="@style/viewCustom"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/viewCustomParent"
            android:hint="@string/firstName"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName"
                style="@style/viewCustom"
                android:hint="Nombres*"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/viewCustomParent"
            android:hint="@string/lastName"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLastName"
                style="@style/viewCustom"
                android:hint="Apellidos"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/viewCustomParent"
            android:hint="@string/email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:hint="correo Electrónico"
                style="@style/viewCustom"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/viewCustomParent"
            android:hint="@string/password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:hint="Contraseña"
                style="@style/viewCustom"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/viewCustom"
            android:background="@color/colorAccent"
            android:onClick="register"
            android:text="@string/createAct"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>