<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/color_aplicacion">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:id="@+id/formulario_editar_cuenta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margen_minima"
          android:orientation="vertical"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_editar_cuenta"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/texto_mediano"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/ingresa_nombre"
            app:helperText="@string/campo_requerido"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/txtName"
              android:layout_width="match_parent"
              android:layout_height="@dimen/altura_campos"
              android:maxLength="@integer/counter_max_name"
              android:inputType="textPersonName"
              android:drawableLeft="@drawable/ic_texto"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/ingresa_apellidos"
            app:helperText="@string/campo_requerido"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/txtLastName"
              android:layout_width="match_parent"
              android:layout_height="@dimen/altura_campos"
              android:maxLength="@integer/counter_max_name"
              android:inputType="textPersonName"
              android:drawableLeft="@drawable/ic_texto"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/email"
            app:helperText="@string/campo_requerido"
            app:counterMaxLength="@integer/counter_max_email"
            app:counterEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/txtEmail"
              android:layout_width="match_parent"
              android:layout_height="@dimen/altura_campos"
              android:maxLength="@integer/counter_max_email"
              android:inputType="textEmailAddress"
              android:drawableLeft="@drawable/ic_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            app:helperText="@string/campo_requerido"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/txtPassword"
              android:layout_width="match_parent"
              android:layout_height="@dimen/altura_campos"
              android:maxLength="@integer/counter_max_name"
              android:inputType="textPassword"
              android:drawableLeft="@drawable/ic_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:background="@drawable/style_spinner"
            android:id="@+id/spRegTipoDocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/altura_spinners"
            android:layout_marginBottom="8dp"
            android:entries="@array/tipo_documento"
            android:paddingBottom="@dimen/margen_default"
            android:spinnerMode="dropdown"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/numero_documento"
            app:helperText="@string/campo_requerido"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/etNumberDocument"
              android:layout_width="match_parent"
              android:layout_height="@dimen/altura_campos"
              android:maxLength="@integer/counter_max_name"
              android:inputType="number"
              android:drawableLeft="@drawable/ic_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/number_cel"
            app:helperText="@string/campo_requerido"
            app:counterMaxLength="@integer/counter_max_phone"
            app:counterEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/etNumberPhone"
              android:layout_width="match_parent"
              android:layout_height="@dimen/altura_campos"
              android:maxLength="@integer/counter_max_phone"
              android:inputType="phone"
              android:drawableLeft="@drawable/ic_phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <Button
              android:id="@+id/btnCuentaCancelar"
              style="?android:textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margen_minima"
              android:text="@string/cancelar"
              android:gravity="center"
              android:paddingBottom="@dimen/margen_default"
              android:textStyle="bold"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toStartOf="@id/btnCuentaModificar"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <Button
              android:id="@+id/btnCuentaModificar"
              style="?android:textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margen_minima"
              android:text="@string/modificar"
              android:layout_gravity="center"
              android:paddingBottom="@dimen/margen_default"
              android:textStyle="bold"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@id/btnCuentaCancelar"
              app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>
</androidx.core.widget.NestedScrollView>