<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_members"
    android:orientation="vertical"
    android:backgroundTint="#F0F1F1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/margen_default"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margen_minima"
        android:paddingTop="@dimen/margen_minima"
        android:paddingLeft="@dimen/margen_minima">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titNameVacuna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margen_minima"
            android:paddingLeft="@dimen/margen_minima"
            android:paddingBottom="@dimen/margen_minima"
            android:text="@string/nombres_vacuna"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vacunaname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margen_minima"
            android:paddingLeft="@dimen/margen_minima"
            android:paddingBottom="@dimen/margen_minima"
            android:text="@string/fullName"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/titNameVacuna"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titFechaAplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margen_minima"
            android:paddingLeft="@dimen/margen_minima"
            android:paddingBottom="@dimen/margen_minima"
            android:text="@string/fecha_aplicacion_vac"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/titNameVacuna"
            app:layout_constraintTop_toBottomOf="@id/titNameVacuna"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aplicationdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margen_minima"
            android:paddingLeft="@dimen/margen_minima"
            android:paddingBottom="@dimen/margen_minima"
            android:text="555555"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/titFechaAplicacion"
            app:layout_constraintTop_toTopOf="@id/titFechaAplicacion"/>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_register_members"
            android:textColor="#000000"
            android:paddingLeft="@dimen/margen_minima"
            android:paddingRight="@dimen/margen_intermedia"
            android:backgroundTint="#00FFFFFF"
            android:drawableLeft="@drawable/ic_edit"
            app:layout_constraintStart_toStartOf="@id/titFechaAplicacion"
            app:layout_constraintTop_toBottomOf="@id/titFechaAplicacion"
            android:onClick="edit" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_register_members"
            android:textColor="#000000"
            android:paddingLeft="@dimen/margen_minima"
            android:paddingRight="@dimen/margen_intermedia"
            android:layout_marginLeft="@dimen/margen_plan_vacunacion"
            android:backgroundTint="#00FFFFFF"
            android:drawableLeft="@drawable/ic_delete"
            app:layout_constraintStart_toStartOf="@id/btnEdit"
            app:layout_constraintTop_toBottomOf="@id/aplicationdate"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>